# fabm-nflexpd

./: COMPATIBILITY_NOTES  README.md
src/: CMakeLists.txt  RHSext_Cbased.F90  abio.F90  abio_Cbased.F90  abio_dEdt.F90  common.F90  det.F90  lambert.F90  lambert_modified.f90  nflexpd.F90  nflexpd_model_library.F90  nut.F90  phy.F90  phy_Cbased.F90  phy_DOQ.F90  phy_IOQ.F90  phy_IOQ_Nbased.F90  phy_abio_Cbased.F90  phy_classic.F90  pmbench_model_library.F90  version.F90.in
testcases/: fabm-nflexpd.yaml  fabm-nflexpd_Cbased.yaml  fabm-nflexpd_Cbased_DA.yaml  fabm-nflexpd_Cbased_IA.yaml  fabm-nflexpd_DOQ.yaml  fabm-nflexpd_DOQ_vs_Droop.yaml  fabm-nflexpd_IOQ-N.yaml  fabm-nflexpd_IOQ.yaml  fabm-nflexpd_IOQ1_vs_IOQ2.yaml  fabm-nflexpd_IOQ_vs_DOQ.yaml  fabm-nflexpd_IOQfixed_IOQ_DOQ_DOQfixed.yaml  fabm-nflexpd_abiophy_Cbased.yaml  fabm-nflexpd_cQ_Droop_IOQ_DOQ.yaml  fabm-nflexpd_cQ_IOQ_DOQ.yaml  fabm-nflexpd_cQ_IOQfixed_IOQ_DOQ_DOQfixed.yaml  fabm-nflexpd_cQ_vs_Droop.yaml  fabm-pmbench_DOQ.yaml  fabm-pmbench_DOQ_vs_Droop.yaml  fabm-pmbench_IOQ-N.yaml  fabm-pmbench_IOQ.yaml  fabm-pmbench_cQ_IOQ_DOQ.yaml  plot_1D-NflexPD.py  plot_1D-NflexPD_dif2.py  plot_1D-PMbench.py  plot_NflexPD.py
